* Recover correctly if a lastmp forked proccess fails.

0.27 (2006-04-12):
==================

* Skip bad data rather than attempting to log it and causing errors.

* Install lastfmsubmit in /usr/lib/lastfmsubmitd, and use the Python
  queue-writer interface in lastmp instead.

* Check for a supplied submission time in lastfmsubmitd.

0.26 (2006-03-25):
==================

* Fix logging error when creating fifo.

0.25 (2006-03-24):
==================

* Added some documentation for plugin developers. Hoping to go 1.0 soon.

* Don't create lockfiles with --output; instead use /var/run/lastfm/lock
  but only if we are writing to the fifo. WARNING: I decided this was a
  good excuse to change the lastfm.queue.Writer interface while I still
  can, so if you are using that, please change your init args.

0.24 (2006-03-13):
==================

* When printing to a pipe in mbfind or mbget, encode with the locale's
  default encoding instead of corrupting everything into ascii.

* Added a --no-network option to lastfmsubmitd for testing purposes, and
  fixed the --no-daemon option.

* Work around a bug in urllib's error handling that was causing crashes.

0.23 (2006-02-26):
==================

* Make mbfind not print a template unless --template is specified;
  otherwise, it will fail, so that ``mbget || mbsubmit`` works as you
  would expect.

* Clean up error messages and add some for import errors in the
  MusicBrainz stuff.

* Ignore songs with missing data properly; this is the daemon's job now,
  so you don't have to worry about throwing crap at it from your client.
  (Your client should not know anything about the network protocol.)

0.22 (2006-02-23):
==================

* Fix possible truncating of song titles due to stringification. This is
  another brown paper bag fix, isn't it. Today is not my day.

0.21 (2006-02-23):
==================

* Brown paper bag: fix man page install locations.

0.20 (2006-02-23):
==================

* Wrote man pages.
