@@ -33,26 +33,11 @@ FUZZ = 1
 
 class Song:
     def __init__(self, sobj):
-        try:
-            self.artist = sobj.artist
-        except AttributeError:
-            self.artist = None
-        try:
-            self.title = sobj.title
-        except AttributeError:
-            self.title = None
-        try:
-            self.album = sobj.album
-        except AttributeError:
-            self.album = None
-        try:
-            self.length = int(sobj.time)
-        except AttributeError:
-            self.length = None
-        try:
-            self.file = sobj.file
-        except AttributeError:
-            self.file = None
+        self.artist = getattr(sobj, 'artist', '')
+        self.title = getattr(sobj, 'title', '')
+        self.album = getattr(sobj, 'album', '')
+        self.length = int(getattr(sobj, 'time', 0))
+        self.file = getattr(sobj, 'file', '')
 
     def __eq__(self, other):
         if other == None:
@@ -68,20 +53,26 @@ class Song:
         return not self == other
 
     def __str__(self):
-        return '%s - %s [%d:%02d]' % ((self.artist, self.title) +
-            divmod(self.length, 60))
+        time = '%d:%02d' % divmod(self.length, 60)
+        if self.artist and self.title:
+            return '%s - %s [%s]' % (self.artist, self.title, time)
+        else:
+            return '%s [%s]' % (self.file, time)
 
     def dict(self):
-        d = {'time': time.gmtime()}
-        for k in ('artist', 'title', 'length'):
-            v = getattr(self, k)
-            if v:
-                d[k] = v
-            else:
-                raise ValueError('%s has no %s' % (self.file, k))
+        d = {
+            'time': time.gmtime(),
+            'artist': lastfm.marshaller.guess(self.artist, 'utf-8'),
+            'title': lastfm.marshaller.guess(self.title, 'utf-8'),
+            'length': self.length,
+            }
         if self.album:
-            d['album'] = self.album
-        return d
+            d['album'] = lastfm.marshaller.guess(self.album, 'utf-8')
+        for reqd in ('artist', 'title', 'length'):
+            if not d[reqd]:
+                raise ValueError('%s is missing %s' % (self.file, reqd))
+        else:
+            return d
 
 class MpdObserver:
     def __init__(self, log, sleep, mpd_args, debug):
@@ -153,8 +144,7 @@ class MpdObserver:
                     if not self.submitted and not self.skipped and \
                             self.played_enough:
                         pid = self.submit(song)
-                        if pid:
-                            self.kids.append(pid)
+                        if pid: self.kids.append(pid)
                         self.submitted = True
         else:
             pos = None
@@ -203,23 +193,19 @@ class MpdObserver:
 
     def submit(self, song):
         try:
-            self.log.info('Sending to daemon')
             sub = song.dict()
             pid = os.fork()
-        except OSError:
-            self.log.error('Could not fork')
-        if pid:
-            return pid
-        try:
-            fifo = lastfm.queue.Writer(self.log, lastfm.FIFO, lastfm.LOCK)
-            print >>fifo, lastfm.marshaller.dump(sub)
-            sys.exit(0)
+            if pid == 0:
+                self.log.info('Sending to daemon')
+                fifo = lastfm.queue.Writer(self.log, lastfm.FIFO, lastfm.LOCK)
+                print >>fifo, lastfm.marshaller.dump(sub)
+                sys.exit(0)
+            else:
+                return pid
         except ValueError, e:
             self.log.error('Missing tags: %s' % e)
-            sys.exit(1)
-        except Exception, e:
-            self.log.error('Child proccess failed: %s' % e)
-            sys.exit(1)
+        except OSError:
+            self.log.error('Could not fork')
 
 def daemon(log, fork):
     if fork:
